agregamos un parrafo corto modificacion

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ Ingeniería en tecnologías en la información con énfasis de desarrollo web y 
     <h1>Tema del trabajo: Ejercicio de rama git/Github</h1>
     <P>Docente:Jorge Centeno</P>
     <p>Elaborado por: Denis Augusto Martínez Betanco</p>
+    <p>hola desde html</p>
     <p>GT:A</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, nisi vitae voluptates deleniti ratione praesentium dolores iure voluptas ea quisquam harum, reprehenderit libero ipsam. Eos in fuga itaque perferendis consequuntur?</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi modi deserunt quis eaque fuga explicabo facilis ad voluptatem similique voluptatum, doloremque praesentium quia, non obcaecati distinctio excepturi deleniti. Voluptatem, nobis?</p>
