agregamos parrafo en rama2

--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@ Ingeniería en tecnologías en la información con énfasis de desarrollo web y 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, nisi vitae voluptates deleniti ratione praesentium dolores iure voluptas ea quisquam harum, reprehenderit libero ipsam. Eos in fuga itaque perferendis consequuntur?</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi modi deserunt quis eaque fuga explicabo facilis ad voluptatem similique voluptatum, doloremque praesentium quia, non obcaecati distinctio excepturi deleniti. Voluptatem, nobis?</p>
     <a href="denis"></a>
+    <p>parrafo desde rama2</p>
 </body>
 </html>
