modifique el parrafo y lo unire con la rama master

--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@ Ingeniería en tecnologías en la información con énfasis de desarrollo web y 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi modi deserunt quis eaque fuga explicabo facilis ad voluptatem similique voluptatum, doloremque praesentium quia, non obcaecati distinctio excepturi deleniti. Voluptatem, nobis?</p>
     <a href="denis"></a>
     <p>parrafo desde rama2</p>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum culpa, consequuntur suscipit doloremque saepe accusantium officia earum praesentium rem possimus, rerum omnis. Culpa pariatur aspernatur excepturi distinctio minus repellendus animi.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum culpa,gti  consequuntur suscipit doloremque saepe accusantium officia earum praesentium rem possimus, rerum omnis. Culpa pariatur aspernatur excepturi distinctio minus repellendus animi.</p>
 </body>
 </html>
